tests/dataset/tpc-ds/compiler/c/q27.error
/tmp/TestCCompiler_TPCDS_Goldenq272538716620/001/prog.c:233:3: error: unknown type name ‘customer_demo_t’
  233 |   customer_demo_t *data;
      |   ^~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq272538716620/001/prog.c: In function ‘create_customer_demo_list’:
/tmp/TestCCompiler_TPCDS_Goldenq272538716620/001/prog.c:238:31: error: ‘customer_demo_t’ undeclared (first use in this function); did you mean ‘CustomerDemo’?
  238 |   l.data = calloc(len, sizeof(customer_demo_t));
      |                               ^~~~~~~~~~~~~~~
      |                               CustomerDemo
/tmp/TestCCompiler_TPCDS_Goldenq272538716620/001/prog.c:238:31: note: each undeclared identifier is reported only once for each function it appears in
/tmp/TestCCompiler_TPCDS_Goldenq272538716620/001/prog.c: In function ‘test_TPCDS_Q27_averages_by_state’:
/tmp/TestCCompiler_TPCDS_Goldenq272538716620/001/prog.c:313:58: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  313 |   if (test_TPCDS_Q27_averages_by_state_result.len != tmp1.len) {
      |                                                          ^
      |                                                          ->
/tmp/TestCCompiler_TPCDS_Goldenq272538716620/001/prog.c:317:67: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  317 |       if (test_TPCDS_Q27_averages_by_state_result.data[i3] != tmp1.data[i3]) {
      |                                                                   ^
      |                                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq272538716620/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq272538716620/001/prog.c:399:45: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  399 |   test_TPCDS_Q27_averages_by_state_result = result;
      |                                             ^~~~~~
